# yardarm

./: .gitignore  CMakeLists.txt  INSTALL  README.md
docs/: CMakeLists.txt  conf.py
include/: yardarm.h
include/yardarm/: c99.h  declarations.h  descriptors.h  types.h  yardarm.h
include/yardarm/macros/: basics.h  descriptors.h  name.h
src/: CMakeLists.txt  yardarm.pc.in
src/libyardarm/: c99.c  yardarm.c
tests/: CMakeLists.txt  helpers.h  test-types.c
